# Simulated-Annealing

./: CMakeLists.txt  SimulatedAnnealing.cpp  SimulatedAnnealing.h  StaticFunctions.cpp  main.cpp
Headers/: Counter.h  NearestNeighbourAlgorithm.h  SimulatedAnnealing.h
Sources/: Counter.cpp  NearestNeighbourAlgorithm.cpp  SimulatedAnnealing.cpp
Utilities/: StaticFunctions.cpp  Structures.cpp
